--- a/setting/setting_simulation_biped_walking.yaml
+++ b/setting/setting_simulation_biped_walking.yaml
@@ -22,13 +22,17 @@ foot_height_max : 0.08
 zmp_modif_time_margin : 0.0
 
 # impact simulation
-impact_timing      : 0.7
+impact_timing      : 0.8
 impact_duration    : 0.2
 
-impact_force       : 0    #  x : 90
+impact_force       : 300    #  x : 90
 impact_theta       :  90 
-# impact_force       : 400    #  y : 0
+# impact_force       : 220    #  y : 0
 # impact_theta       : 180
 
-impact_step_number : 3
+impact_step_number : 4
 impact_target : 1
+
+zmp_offset_y  : 0.01
+
+foot_offset_x : 0.005
