--- a/setting/setting_wbik.yaml
+++ b/setting/setting_wbik.yaml
@@ -11,18 +11,18 @@ w_hqp_wbik2 : [0.08,       # Hand
                0.0000001]  # Joint acc    
 
 kp_wbik : [
-           30.0,       # v lfoot (walking in place)
-           30.0,       # w lfoot (walking in place)
-           30.0,       # v rfoot (walking in place)
-           30.0,       # w rfoot (walking in place)
-           22.0,       # vx com (walking in place)
-           30.0,       # vy com (walking in place)
-           30.0,       # vz com (walking in place)
+           40.0,       # v lfoot (walking in place)
+           40.0,       # w lfoot (walking in place)
+           40.0,       # v rfoot (walking in place)
+           40.0,       # w rfoot (walking in place)
+           40.0,       # vx com (walking in place)
+           40.0,       # vy com (walking in place)
+           40.0,       # vz com (walking in place)
 
           # 30.0,       # v lfoot (obstacle)
           # 30.0,       # w lfoot (obstacle)     
           # 30.0,       # v rfoot (obstacle)
-          # 30.0,       # w rfoot (obstacle)2
+          # 30.0,       # w rfoot (obstacle)
           # 30.0,       # vx com (obstacle)
           # 30.0,       # vy com (obstacle)
           # 50.0,       # vz com (obstacle)
@@ -38,6 +38,6 @@ kp_wbik : [
 eps_         : 5.0
 eps_terminal : 0.0
 
-damp1 : 0.93 #  if you want to use upperbody more, please lower it.
+damp1 : 1.0 #  if you want to use upperbody more, please lower it.
 
 damp2 : 1.0
