MJ TRO EXPERIMENT READY ver3

--- a/setting/setting_wbik.yaml
+++ b/setting/setting_wbik.yaml
@@ -1,14 +1,14 @@
 w_hqp_wbik1 : [100.0,     # Foot
                10.0,      # COM
                1.0,       # CAM (control Joint)
-               0.00001,   # Joint vel
-               0.0000001] # Joint acc
+               0.0001,    # Joint vel
+               2.0]  # Joint acc
 
 w_hqp_wbik2 : [0.1,       # Hand
                1.0,       # Upperbody
-               1.0,       # Pelvis
-               0.00001,     # Joint vel    
-               0.0000001]  # Joint acc    
+               0.05,      # cam smoothing
+               0.0001,    # Joint vel    
+               2.0]  # Joint acc    
 
 kp_wbik : [
            30.0,       # v lfoot (walking in place)
@@ -16,7 +16,7 @@ kp_wbik : [
            30.0,       # v rfoot (walking in place)
            30.0,       # w rfoot (walking in place)
            30.0,       # vx com (walking in place)
-           50.0,       # vy com (walking in place)
+           30.0,       # vy com (walking in place)
            30.0,       # vz com (walking in place)
 
           # 30.0,       # v lfoot (obstacle)
@@ -41,7 +41,7 @@ kd_wbik : [0.0,
 eps_         : 5.0
 eps_terminal : 0.0
 
-damp1 : 0.95 #  if you want to use upperbody more, please lower it.
+damp1 : 0.93 #  if you want to use upperbody more, please lower it.
 damp2 : 1.0
 
-vjoint_vel_regul : 100000
+vjoint_vel_regul : 1
