--- a/setting/setting_wbik.yaml
+++ b/setting/setting_wbik.yaml
@@ -1,23 +1,23 @@
-w_hqp_wbik1 : [100.0,     # Foot
+w_hqp_wbik1 : [50.0,     # Foot
                10.0,      # COM
                1.0,       # CAM (control Joint)
                0.0001,    # Joint vel
-               2.0]  # Joint acc
+               2.0]       # Joint acc
 
 w_hqp_wbik2 : [0.1,       # Hand
                1.0,       # Upperbody
                0.05,      # cam smoothing
                0.0001,    # Joint vel    
-               2.0]  # Joint acc    
+               2.0]       # Joint acc    
 
 kp_wbik : [
            30.0,       # v lfoot (walking in place)
            30.0,       # w lfoot (walking in place)
            30.0,       # v rfoot (walking in place)
            30.0,       # w rfoot (walking in place)
-           30.0,       # vx com (walking in place)
-           30.0,       # vy com (walking in place)
-           30.0,       # vz com (walking in place)
+           35.0,       # vx com (walking in place)
+           35.0,       # vy com (walking in place)
+           35.0,       # vz com (walking in place)
 
           # 30.0,       # v lfoot (obstacle)
           # 30.0,       # w lfoot (obstacle)     
@@ -37,6 +37,13 @@ kp_wbik : [
 kd_wbik : [0.0,
            0.0,
            0.0]  # Derivative term makes WBIK unstable.
+
+kp_wbik_foot : [30.0,   # lfoot_x
+                30.0,   # lfoot_y
+                30.0,   # lfoot_z
+                30.0,   # rfoot_x
+                30.0,   # rfoot_y
+                30.0]   # rfoot_z
 
 eps_         : 5.0
 eps_terminal : 0.0
